2006-02-01 Pieter Lenaerts <e-type@sourcemage.org>
	* added DEPENDS, edited BUILD: optional_depends on linux-pam and openssl
	* added build.patch, PRE_BUILD: no user input!

2006-01-08 Pieter Lenaerts <e-type@cwazy.co.uk>
	* DETAILS: 4.64, changed UPDATED due to security warning

2005-11-29 Seth Woolley <seth@tautology.org>
	* DETAILS: MD5 -> SHA512

2005-05-06 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 4.63
	* DETAILS, BUILD, INSTALL: converted to BUILD_API=2
	* services: removed

2005-01-29 Arjan Bouter <abouter@sourcemage.org>
	* BUILD: spell_installed -> spell_ok conversion

2005-01-22 Rafael George <george.rafael@gmail.com>
	* BUILD: linux-pam rename lower case
	* TRIGGERS: linux-pam rename lower case

2005-01-20 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 4.62, removed MENU_* items
	  LICENSE -> LICENSE[0]

2004-07-19 Eric Sandall <eric@sandall.us>
	* DETAILS: Updated to 4.61

2004-05-12 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 4.60

2003-11-02 Eric Sandall <eric@sandall.us>
	* PROVIDES: Upper-case provides
	* HISTORY: Formatted to Guru Handbook

2003-09-13 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: updated to 4.58

2003-08-10 hgg <hgreig@bigpond.net.au>
	* TRIGGERS: Revert on_dispel Linux-PAM cast_self
	  (doesn't work the way it is documented)

2003-07-26 hgg <hgreig@bigpond.net.au>
	* TRIGGERS: Update for Linux-PAM

2003-05-30 M.L. <mlubrano@sourcemage.org>
	* DETAILS: Version++ (4.56).

2003-04-17 M.L. <mlubrano@sourcemage.org>
	* DETAILS: Version++ (4.55).

2003-03-02 M.L. <mlubrano@sourcemage.org>
	* TRIGGERS: Added

2003-01-16 M.L. <mlubrano@sourcemage.org>
	* DETAILS: Version++ (4.53).

2003-01-10 M.L. <mlubrano@sourcemage.org>
	* DETAILS: Version++ (4.52).

2002-12-14 M.L. <mlubrano@sourcemage.org>
	* DETAILS: Version++ (4.51).

2002-12-04 M.L. <mlugrano@sourcemage.org>
	* Added TRIGGERS file (on pam: recast).

2002-12-11 M.L. <mlubrano@sourcemage.org>
	* DETAILS: Version++ (4.50).
	* BUILD: Fixed

2002-11-05 M.L. <mlubrano@sourcemage.org>