@@ -1,0 +1,4 @@
+427c427
+< 	   read ans
+---
+> 	   ans='y'
