@@ -1,0 +1,9 @@
+optional_depends  "linux-pam"  \
+                  "--with-pam" \
+                  ""           \
+                  "Would you like to use pam authentication modules?" &&
+
+optional_depends  "openssl"    \
+                  "--with-ssl" \
+                  ""           \
+                  "Would you like to use SSL?"
