@@ -1,3 +1,7 @@
+2006-02-16 Pieter Lenaerts <e-type@sourcemage.org>
+	* added DEPENDS, edited BUILD: optional_depends on linux-pam and openssl
+	* added build.patch, PRE_BUILD: no user input!
+
 2005-11-29 Seth Woolley <seth@tautology.org>
 	* DETAILS: MD5 -> SHA512
 
