@@ -1,3 +1,6 @@
+2006-02-16 Pieter Lenaerts <e-type@sourcemage.org>
+	* added build.patch, PRE_BUILD, files were not added in previous submit
+
 2006-02-01 Pieter Lenaerts <e-type@sourcemage.org>
 	* added DEPENDS, edited BUILD: optional_depends on linux-pam and openssl
 	* added build.patch, PRE_BUILD: no user input!
